tests/tests/ui-stable/no-arguments.stderr
thread 'rustc' panicked at 'argument must be a single string literal, but got 0 arguments', impl/src/lib.rs:58:9
note: Run with `RUST_BACKTRACE=1` for a backtrace.
error: proc-macro derive panicked
  --> $DIR/no-arguments.rs:13:5
   |
13 |     indoc!();
   |     ^^^^^^^^^
   |
   = help: message: argument must be a single string literal, but got 0 arguments
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

